# vanish-py

./: README.md  pyproject.toml  vanish.py
