[project]
name = "vanish-py"
version = "0.0.1"
description = "Python client library for the Vanish temporary email service API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["email", "temporary", "disposable", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/coldpatch/vanish-py"
Repository = "https://github.com/coldpatch/vanish-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vanish.py"]
